  - Method hasAcquisition re-defined in TSBase for the same reason exposed in the previous line.
  - Attribute _isHetereogeneous and accessors added to SetOfTomograms and SetOfTiltSeries. Used in the string
    representation of both objects.
  - TiltSeries: method reStack added and applyTransforma refactored. Both related to the management of the excluded
    views.
  - TCL:
    * Attribute _isHetereogeneous checked in the corresponding sets.
    * Method checktomograms now is able to check the acquisition.
    * Method checkTsOriginMatrix added.
  - TS viewer:
    * Fix the list of tilt-series viewers
    * Using ScipionImageReader to read tiltseries
v3.7.2:
 Users:
   - Handling the matching in the ctf import(generalizing without the need to set patterns such as {TS}).
   - Refactoring the tiltserie viewer
  - Import TS, TSM and tomos: remove double underscore from both the linked filenames and the tsIds.
  - Import TS: add a validation for the case of heterogeneous sets of TS in the number of tilt images and providing the
    angular data using a range. The cases avoided with this validation prevents erratic behavior in the subsequent
    protocols.
 Developers:
  - Add to Tomogram and SetOfTomograms the attribute _ctfcorrected, the same way it was added to the tilt-series.
  - Update the TCL based on the previous point.
v3.7.1: HOTFIX - join TS bug solved (Thanks to Doulin Sheperd).
v3.7.0:
 Developers:
  - Add acquistion order attribute to the CTFTomo to provide a robust matching between tilt-images and CTFTomos.
  - Add method getTsIds to SetOfTomograms (useful when importing coordinates).
  - CTFTomoSeries: add method getCtfTomoFromTi.
  - CTFTomo: add acqOrder to the attributes list used on its copy method.
  - TiltSeriesBase - method generateTltFile expanded: optional input presentAcqOrders to manage the view exclusion.
  - Utils - add method getCommonTsAndCtfElements to intersect tilt images and CTFs based on the value of the